styles/index.css
body {
    font-family: "Roboto", serif;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
}

.header {
    display: flex;
    align-items: center;
    justify-content: space-around;
    background-color: #1F2937;
}

.header ul {
    list-style: none;
    display: flex;
    gap: 25px;

}

.header h1 {
    color: #F9FAF8;
    font-size: 24px;
}

.header a {
    text-decoration: none;
    font-size: 18px;
    color: #E5E7EB;
}

.container {
    background-color: #1F2937;
    display: flex;
    padding: 80px 160px 60px 160px;
    gap: 80px;
    justify-content: center;
}

.hero {
    display: flex;
    flex-direction: column;
}

.hero h1 {
    color: #F9FAF8;
    font-size: 48px;
    font-weight: 900;
    margin: 0;
}

.hero p {
    color: #E5E7EB;
    font-size: 18px;
}

.hero-image {
    width: 400px;
    height: auto;
}

.signup-button {
    width: 90px;
    height: 30px;
    background-color: #3882F6;
    color: #F9FAF8;
    border: none;
    border-radius: 10px;
    font-weight: bold;
    cursor: pointer;

}

.signup-button:hover {
    background-color: #81acec;
}

.item {
    height: 150px;
    width: 150px;
    border: 5px solid #3882F6;
    border-radius: 12px;

}

.info {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 40px;
}

.body {
    display: flex;
    justify-content: center;
}

.title {
    text-align: center;
}

.quote {
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.quote-text {
    padding-right: 200px;
    padding-left: 200px;
    padding-top: 70px;
    padding-bottom: 70px;
}

.quote-text p {
    font-size: 36px;
    font-weight: lighter;
    font-style: italic;
    color: #1F2937;
    

}

.quote-text h2 {
    text-align: right;
}

.action-section {
display: flex;
justify-content: center;
padding-top: 50px;
padding-bottom: 50px;

}

.action-container {
    background-color: #3882F6;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 100px;
    border: none;
    border-radius: 12px;
    color: #F9FAF8;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 50px;
    padding-right: 50px;
    max-width: 800px;
}

#action-button {
    width: 90px;
    height: 30px;
    background-color: #3882F6;
    color: #F9FAF8;
    border: 2px solid;
    border-radius: 10px;
    font-weight: bold;
    cursor: pointer;
}

#action-button:hover {
    background-color: #81acec;
}

.action-container h3{
    margin-bottom: 3px;
}

.footer {
    background-color: #1F2937;
    color: #F9FAF8;
    text-align: center;
    padding-top: 20px;
    padding-bottom: 20px;
}

